<resources>
    <string name="app_name">FoodLocker</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? LOG IN</string>
    <string name="select_photo">Select Photo</string>
    <string name="login">Login</string>
    <string name="back_to_registration">Don\'t have an account? SIGN IN</string>


    <string name="foodLocker_logo">FoodLocker Logo</string>
    <string name="google_login">Google Login</string>
    <string name="title_home">Home</string>
    <string name="title_diary">Diary</string>
    <string name="title_progress">Progress</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="Messages">Messages</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="new_message">New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="latest_message">Latest Message</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight (Kg)</string>
    <string name="weight_target">Weight target</string>
    <string name="water_assumed_daily">Water assumed daily</string>
    <string name="add_information_and_log_in">Add information and Log in</string>
    <string name="daily_kcal_assumed">daily Kcal</string>
    <string name="weakly_sport_time_hours">weakly sport</string>
    <string name="height_cm">height</string>
    <string name="date_of_birthday">Date of birthday</string>

    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_login_button">facebook login button</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="image_post">image post</string>
    <string name="loading">loading</string>
    <string name="like">Like</string>
    <string name="start_following_your_friends_to_see_their_posts">start following your friends to see their posts</string>
    <string name="what_are_you_thinking_about">What are you thinking about?</string>
    <string name="publish">Publish</string>
    <string name="image_progress">image progress</string>
    <string name="entries">Entries</string>
    <string name="kg">Kg</string>
    <string name="starting_weight">Starting Weight</string>
    <string name="difference">Difference</string>
    <string name="actual_weight">Actual Weight</string>
    <string name="add_weight">add weight</string>
    <string name="bmi">BMI:</string>
    <string name="actual_weight_">Actual Weight:</string>
    <string name="cm">Cm</string>
    <string name="age_">Age:</string>
    <string name="basal">Basal:</string>
    <string name="progress">Progress:</string>
    <string name="target">Target:</string>
    <string name="photo_post">Photo post</string>
    <string name="back">Back</string>
    <string name="add_image">Add Image</string>
    <string name="insert">insert</string>
    <string name="add_weight_state">Add weight state</string>
    <string name="kcal">Kcal</string>
    <string name="loss">Loss:</string>
    <string name="actual">Actual:</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="lean_weight">lean weight</string>
    <string name="fatter_weight">fatter weight</string>
    <string name="equal_weight">equal weight</string>
    <string name="search">Search</string>
    <string name="likes">Likes</string>
    <string name="image">Image</string>
    <string name="_0_results">0 Results</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="this_is_my_message_that_will_wrap_into_multiple_lines_and_keep_on_going">This is my message that will wrap into multiple lines and keep on going</string>
    <string name="message_button">Message Button</string>
    <string name="follow_button">Follow button</string>
    <string name="target_title">Target</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="remaining">Remaining</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_food">Add Food</string>
    <string name="remaining_calories">Remaining calories</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="exercises">Exercises</string>
    <string name="add_exercise">add exercise</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="search_food">Search Food</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="nutritional_values">Nutritional Values</string>
    <string name="calories">Calories</string>
    <string name="total_fat">Total Fat</string>
    <string name="g">g</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="total_carbohydrates">Total Carbohydrates</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="potassium">Potassium</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="vitamin_b6">Vitamin B6</string>
    <string name="vitamin_b12">Vitamin B12</string>
    <string name="polyunsaturated_fats">Polyunsaturated Fats</string>
    <string name="sugar">Sugar</string>
    <string name="monounsaturated_fats">Monounsaturated Fats</string>
    <string name="mg">mg</string>
    <string name="micro_g">&#956;g</string>
    <string name="saturated_fats">Saturated Fats</string>
    <string name="fiber">Fiber</string>
    <string name="add_sport">add sport</string>
    <string name="search_exercises">Search Exercises</string>
    <string name="minutes_of_exercise">Minutes of Exercise</string>
    <string name="my_profile">My Profile</string>
    <string name="nutrition">Nutrition</string>
    <string name="settings">Settings</string>
    <string name="all_day_macro">All Day Macro</string>
    <string name="modify_data">Modify Data</string>
    <string name="set_data">Set Data</string>
</resources>
