<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"
            android:contentDescription="@string/title_home" />

    <item
            android:id="@+id/navigation_diary"
            android:icon="@drawable/ic_open_book"
            android:title="@string/title_diary"
            android:contentDescription="@string/title_diary" />

    <item
            android:id="@+id/navigation_progress"
            android:icon="@drawable/ic_progress_black_24dp"
            android:title="@string/title_progress"
            android:contentDescription="@string/title_progress" />

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_profile"
            android:contentDescription="@string/title_profile" />
</menu>
