<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search"
            android:contentDescription="@string/search"
            android:titleCondensed="@string/search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="ifRoom|withText" />
    <item
            android:id="@+id/app_bar_message"
            android:icon="@drawable/ic_chat_gray_24dp"
            android:title="@string/Messages"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/menu_sign_out"
            android:title="@string/sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:visible="true"
            android:enabled="true"
            app:showAsAction="collapseActionView" />

</menu>