<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="property"
                type="com.letsbuildthatapp.foodlocker.models.WeightProperty" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardview_background">

                <TextView
                        android:id="@+id/weight_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        app:date="@{property.createdAt}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="01/02/20 13:30" />

                <TextView
                        android:id="@+id/difference_weight"
                        android:text="@{property.weight}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@+id/weight_time"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="80.5" />

                <ImageView
                        android:id="@+id/image_progress"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image_progress"
                        android:maxHeight="177dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        android:padding="2dp"
                        android:layout_marginTop="4dp"
                        app:imageUrl="@{property.photo}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_account_graydp"
                        tools:src="@drawable/ic_account_circle_white_24dp" />

                <TextView
                        android:id="@+id/unit"
                        android:text="@string/kg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_marginStart="2dp"
                        app:layout_constraintBottom_toBottomOf="@+id/difference_weight"
                        app:layout_constraintStart_toEndOf="@+id/difference_weight"
                        app:layout_constraintTop_toTopOf="@+id/difference_weight" />

                <ImageView
                        android:id="@+id/fatter_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/red_600"
                        android:visibility="invisible"
                        android:contentDescription="@string/fatter_weight"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/unit"
                        app:layout_constraintStart_toEndOf="@+id/unit"
                        app:layout_constraintTop_toTopOf="@+id/unit"
                        app:srcCompat="@drawable/ic_trending_up_black_24dp"
                        tools:visibility="visible" />

                <ImageView
                        android:id="@+id/lean_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="#00C853"
                        android:visibility="invisible"
                        android:contentDescription="@string/lean_weight"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/unit"
                        app:layout_constraintStart_toEndOf="@+id/unit"
                        app:layout_constraintTop_toTopOf="@+id/unit"
                        app:srcCompat="@drawable/ic_trending_down_black_24dp"
                        tools:visibility="visible" />

                <ImageView
                        android:id="@+id/equal_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/material_on_background_emphasis_medium"
                        android:visibility="invisible"
                        android:contentDescription="@string/equal_weight"
                        android:layout_marginStart="10dp"
                        android:foregroundGravity="center_vertical|center|center_horizontal"
                        app:layout_constraintBottom_toBottomOf="@+id/unit"
                        app:layout_constraintStart_toEndOf="@+id/unit"
                        app:layout_constraintTop_toTopOf="@+id/unit"
                        app:srcCompat="@drawable/ic_equal_white_24dp"
                        tools:visibility="visible" />

                <ImageView
                        android:id="@+id/start_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/material_on_background_emphasis_medium"
                        android:visibility="invisible"
                        android:contentDescription="@string/starting_weight"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/unit"
                        app:layout_constraintStart_toEndOf="@+id/unit"
                        app:layout_constraintTop_toTopOf="@+id/unit"
                        app:srcCompat="@drawable/ic_flag_black_24dp"
                        tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
